--- a/templates/test/index.html.twig
+++ b/templates/test/index.html.twig
@@ -4,23 +4,30 @@
 
 {% block body %}
 
+{# <pre>
+    {{ dump(liste) }}
+</pre> #}
 
+    <table>
+        <thead>
+            <tr>
+                <th>Couleur</th>
+                <th>Code</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for ligne in liste %}
+                <tr>
+                    <td>{{ligne.nom|upper}}</td>
+                    <td>{{ligne.code}}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <hr>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <img src="{{ asset('img/image1.jpg') }}" alt="">
 
-    <h2>{{ test }}</h2>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/damien/symfony-1612/rwf3/src/Controller/TestController.php'|file_link(0) }}">src/Controller/TestController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/damien/symfony-1612/rwf3/templates/test/index.html.twig'|file_link(0) }}">templates/test/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
 {% block footer %}Autre Pied de page{% endblock %}
