--- a/templates/partials/nav.html.twig
+++ b/templates/partials/nav.html.twig
@@ -2,4 +2,5 @@
     <div><a href="{{ path('home') }}">Accueil</a></div>
     <div><a href="{{ path('app_test')}}">Test</a></div>
     <div><a href="{{ path('app_test2')}}">Test 2</a></div>
+    <div><a href="{{ path('liste_villes')}}">Villes</a></div>
 </nav>
