--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,8 @@
         </title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {% block stylesheets %}
+            {# <link rel="stylesheet" href="https://bootswatch.com/5/flatly/bootstrap.min.css"> #}
+            <link rel="stylesheet" href="{{asset('css/style.css')}}">
         {% endblock %}
 
         {% block javascripts %}
@@ -15,7 +17,11 @@
     <body>
         {% block header %}Header{% endblock %}
         {% include "partials/nav.html.twig" %}
-        {% block body %}{% endblock %}
+        <div class="container">
+            <div class="row">
+                {% block body %}{% endblock %}
+            </div>
+        </div>
         {% block footer %}Pied de page{% endblock %}
     </body>
 </html>
