--- a/templates/companies/show.html.twig
+++ b/templates/companies/show.html.twig
@@ -10,4 +10,6 @@
     <p>Sigle : {{company.sigle}}</p>
     <p>Nombre d'employés : {{company.employes}}</p>
 
+    <a href="{{path('app_companies')}}" class="btn btn-primary">Retour à la liste</a>
+
 {% endblock %}
