--- a/templates/companies/index.html.twig
+++ b/templates/companies/index.html.twig
@@ -10,6 +10,7 @@
             <th>Nom</th>
             <th>Sigle</th>
             <th>Employés</th>
+            <th>Actions</th>
         </thead>
         {% for company in companies %}
             <tr>
@@ -17,9 +18,11 @@
                 <td>{{ company.nom }}</td>
                 <td>{{ company.sigle }}</td>
                 <td>{{ company.employes }}</td>
+                <td><a href="{{path('show_company',{'id': company.id})}}" class="btn btn-primary">Voir</a></td>
             </tr>
         {% endfor %}
     </table>
+
 
 
 
