--- a/templates/companies/show.html.twig
+++ b/templates/companies/show.html.twig
@@ -10,6 +10,8 @@
     <p>Sigle : {{company.sigle}}</p>
     <p>Nombre d'employés : {{company.employes}}</p>
 
-    <a href="{{path('app_companies')}}" class="btn btn-primary">Retour à la liste</a>
+    <div class="col-3">
+        <a href="{{path('app_companies')}}" class="btn btn-primary">Retour à la liste</a>
+    </div>
 
 {% endblock %}
