jeudi form companies

--- a/templates/companies/index.html.twig
+++ b/templates/companies/index.html.twig
@@ -23,7 +23,7 @@
         {% endfor %}
     </table>
 
-
+    <a href="{{ path('add_company') }}" class="btn btn-primary mt-3">Ajouter une compagnie</a>
 
 
 {% endblock %}
