--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ContactController!{% endblock %}
+{% block title %}Contact{% endblock %}
 
 {% block body %}
 
     {{ form(formulaire)}}
-    
+
 {% endblock %}
