--- a/templates/companies/add.html.twig
+++ b/templates/companies/add.html.twig
@@ -6,6 +6,15 @@
 
 <h1>Nouvelle compagnie</h1>
 
-{{ form(formulaire)}}
+{# {{ form(formulaire)}}  Intégralité du formulaire #}
+
+{# {{ form_start(formulaire, {'attr': {'novalidate':'novalidate'}})}} #}
+{{ form_start(formulaire)}}
+    {# {{ form_widget(formulaire)}} #}
+    {{ form_row(formulaire.nom)}}
+    {{ form_row(formulaire.employes)}}
+    {{ form_row(formulaire.sigle)}}
+    <button class="btn btn-primary">Valider</button>
+{{ form_end(formulaire)}}
 
 {% endblock %}
