--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -4,6 +4,8 @@
 
 {% block body %}
 
-    {{ form(formulaire)}}
+    {# {{ form(formulaire, {"attr": {"novalidate": "novalidate"}}) }} #} 
+    {{ form(formulaire) }}
 
 {% endblock %}
+
