--- a/templates/companies/add.html.twig
+++ b/templates/companies/add.html.twig
@@ -11,9 +11,15 @@
 {# {{ form_start(formulaire, {'attr': {'novalidate':'novalidate'}})}} #}
 {{ form_start(formulaire)}}
     {# {{ form_widget(formulaire)}} #}
-    {{ form_row(formulaire.nom)}}
-    {{ form_row(formulaire.employes)}}
-    {{ form_row(formulaire.sigle)}}
+    <div class="row">
+        {{ form_row(formulaire.nom)}}
+    </div>
+    <div class="row">
+        {{ form_row(formulaire.employes)}}
+    </div>
+    <div class="row">
+        {{ form_row(formulaire.sigle)}}
+    </div>
     <button class="btn btn-primary">Valider</button>
 {{ form_end(formulaire)}}
 
