--- a/templates/companies/update.html.twig
+++ b/templates/companies/update.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nouvelle compagnie{% endblock %}
+{% block title %}Upgate compagnie{% endblock %}
 
 {% block body %}
 
-<h1>Nouvelle compagnie</h1>
+<h1>Modification d'une compagnie</h1>
 
 {# {{ form(formulaire)}}  Intégralité du formulaire #}
 
