--- a/templates/companies/index.html.twig
+++ b/templates/companies/index.html.twig
@@ -18,7 +18,11 @@
                 <td>{{ company.nom }}</td>
                 <td>{{ company.sigle }}</td>
                 <td>{{ company.employes }}</td>
-                <td><a href="{{path('show_company',{'id': company.id})}}" class="btn btn-primary">Voir</a></td>
+                <td>
+                    <a href="{{path('show_company',{'id': company.id})}}" class="btn btn-primary">Voir</a>
+                    <a href="{{path('modify_company',{'id': company.id})}}" class="btn btn-warning">Modifier</a>
+                    <a href="{{path('delete_company',{'id': company.id})}}" class="btn btn-danger">Suppression</a>
+                </td>
             </tr>
         {% endfor %}
     </table>
