--- a/templates/companies/update.html.twig
+++ b/templates/companies/update.html.twig
@@ -25,5 +25,9 @@
 
 {% include "companies/form.html.twig" %}
 
+<div class="col-3">
+        <a href="{{path('app_companies')}}" class="btn btn-primary">Retour à la liste</a>
+    </div>
+
 
 {% endblock %}
