--- a/templates/companies/form.html.twig
+++ b/templates/companies/form.html.twig
@@ -1,7 +1,7 @@
 {# {{ form(formulaire)}}  Intégralité du formulaire #}
 
-{# {{ form_start(formulaire, {'attr': {'novalidate':'novalidate'}})}} #}
-{{ form_start(formulaire)}}
+{{ form_start(formulaire, {'attr': {'novalidate':'novalidate'}})}}
+{# {{ form_start(formulaire)}} #}
     {{ form_widget(formulaire)}}
     {# <div class="row">
         {{ form_row(formulaire.nom)}}
